# apiserver/model_device_asset.go
@@ -1,0 +1,52 @@
+/*
+ * Loriot.io app API
+ *
+ * API to access and configure the Loriot.io app
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apiserver
+
+import (
+	"time"
+)
+
+// DeviceAsset - LoRaWAN device handled by the Loriot.io app
+type DeviceAsset struct {
+
+	// App configs defining the Loriot.io target the device belongs to
+	ConfigID *int64 `json:"configID,omitempty"`
+
+	// Eliona project ID the asset belongs to
+	ProjectID *string `json:"projectID,omitempty"`
+
+	// Unique identifier for the asset
+	GlobalAssetIdentifier string `json:"globalAssetIdentifier,omitempty"`
+
+	// Application hexadecimal (uppercase) ID for Loriot
+	AppID string `json:"appID,omitempty"`
+
+	// Global ID in IEEE EUI64 address space that uniquely identifies the device
+	DevEUI string `json:"devEUI,omitempty"`
+
+	// corresponding asset ID
+	AssetID *int32 `json:"assetID,omitempty"`
+
+	// Latest status code 201 created, 200 updated, 204 deleted
+	LatestStatusCode *int32 `json:"latestStatusCode,omitempty"`
+
+	// Timestamp of the latest change action
+	ChangedAt *time.Time `json:"changedAt,omitempty"`
+}
+
+// AssertDeviceAssetRequired checks if the required fields are not zero-ed
+func AssertDeviceAssetRequired(obj DeviceAsset) error {
+	return nil
+}
+
+// AssertDeviceAssetConstraints checks if the values respects the defined constraints
+func AssertDeviceAssetConstraints(obj DeviceAsset) error {
+	return nil
+}
