# openapi.yaml
@@ -156,7 +156,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Device"
+                  $ref: "#/components/schemas/DeviceAsset"
     post:
       tags:
         - Devices
@@ -189,7 +189,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/Device"
+                  $ref: "#/components/schemas/DeviceAsset"
 
   /version:
     get:
@@ -325,12 +325,13 @@ components:
           nullable: true
           example: "90"
 
-    Device:
+    DeviceAsset:
       type: object
       description: LoRaWAN device handled by the Loriot.io app
       properties:
         configID:
-          type: string
+          type: integer
+          format: int64
           description: App configs defining the Loriot.io target the device belongs to
           nullable: true
         projectID:
@@ -342,7 +343,7 @@ components:
           description: Unique identifier for the asset
           example: loriot_dev
           nullable: false
-        appId:
+        appID:
           type: string
           description: Application hexadecimal (uppercase) ID for Loriot
           nullable: false
@@ -351,11 +352,20 @@ components:
           description: Global ID in IEEE EUI64 address space that uniquely identifies the device
           nullable: false
         assetID:
-          type: string
+          type: integer
           description: corresponding asset ID
           nullable: true
+        latestStatusCode:
+          type: integer
+          description: Latest status code 201 created, 200 updated, 204 deleted
+          nullable: true
+        changedAt:
+          description: Timestamp of the latest change action
+          format: date-time
+          nullable: true
+          type: string
 
-    NewDevice:
+    NewDeviceAsset:
       type: object
       required:
         - devEUI
@@ -389,7 +399,7 @@ components:
 
     NewDeviceOTAA10:
       allOf:
-        - $ref: '#/components/schemas/NewDevice'
+        - $ref: '#/components/schemas/NewDeviceAsset'
         - properties:
             appEUI:
               type: string
@@ -399,7 +409,7 @@ components:
 
     NewDeviceOTAA11:
       allOf:
-        - $ref: '#/components/schemas/NewDevice'
+        - $ref: '#/components/schemas/NewDeviceAsset'
         - properties:
             joinEUI:
               type: string
@@ -412,7 +422,7 @@ components:
 
     NewDeviceABP10:
       allOf:
-        - $ref: '#/components/schemas/NewDevice'
+        - $ref: '#/components/schemas/NewDeviceAsset'
         - properties:
             devAddr:
               type: string
@@ -427,7 +437,7 @@ components:
 
     NewDeviceABP11:
       allOf:
-        - $ref: '#/components/schemas/NewDevice'
+        - $ref: '#/components/schemas/NewDeviceAsset'
         - properties:
             netID:
               type: string
@@ -465,7 +475,7 @@ components:
       properties:
         parameter:
           type: string
-          example: "appId"
+          example: "appID"
         regex:
           type: string
           example: "^ABC.*$"
